--- a/src/index.css
+++ b/src/index.css
@@ -34,14 +34,18 @@ input[type=number] {
 }
 
 
-/* ---- field styles ----*/
-
-.mont{
-  font-family: "MontExtralight";
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
-/* ---- Fonts ---- */
 
+/* --------------------------- Fonts --------------------------- */
 @font-face {
   font-family: "MontExtralight";
   src: url("../fonts/mont_heavydemo.ttf") format("truetype");
@@ -70,20 +74,31 @@ input[type=number] {
   font-weight: normal;
 }
 
+/* -------- fonts styles -------- */
+.win{
+  font-family: "Cheque-Black";
+}
+.balans {
+  font-family: "Balans";
+}
+.mont{
+  font-family: "MontExtralight";
+}
 
+
+/* ----------------------- fields styles ----------------------- */
+.field {
+  width: 70%;
+}
 #field :first-child :first-child .field-cell {
   border-radius: 0.23rem 0 0 0;
 }
-
 #field :first-child :last-child .field-cell {
   border-radius: 0 0.23rem 0 0;
 }
-
-
 #field :last-child :first-child .field-cell {
   border-radius: 0 0 0 0.23rem;
 }
-
 #field :last-child :last-child .field-cell {
   border-radius: 0 0 0.23rem 0;
 }
@@ -101,43 +116,52 @@ input[type=number] {
   background: #f20606;
 }
 
-/* ---- finished text ---- */
 
-.win{
-  font-family: "Cheque-Black";
-}
-
-.game-over{
-  font-family: "CinzelDecorative";
-}
-
-
-
-.balans {
-  font-family: "Balans";
-}
-
+/* ----------------------- backrounds ----------------------- */
 .bg-homePage {
   background-image: url(./backGrounds/whiteBricks.jpg);
 }
+.bg-red {
+  background-color: #ff6a6a;
+}
+.bg-yellow {
+  background-color: #fdff78;
+}
+.bg-blue {
+  background-color: #7d99ff;
+}
+.bg-pink {
+  background-color: #ff9ee4;
+}
+.bg-green {
+  background-color: #82ff8f;
+}
+.bg-orange {
+  background-color: #ffcc66;
+}
+.bg-gray {
+  background-color: #d0d0d0;
+}
+.bg-purple {
+  background-color: #cbb8e9;
+}
+.bg-maroon {
+  background-color: #d26868f6;
+}
+.bg-toffee {
+  background-color: #999162;
+}
 
 
-
-
-
-
-
-
-
-/* ---styles for cards with formuls--- */
+/* -------- styles for cards with formuls -------- */
 .flip-card {
-  height: 1.75rem;
-  width: 1.75rem;
-  outline: 1px solid black;
+  height: 140px;
+  width: 310px;
   border-radius: 0.23rem;
 }
 .flip-card-inner {
   height: 100%;
+  outline: 1px solid black;
   width: 100%;
   position: relative;
   transform-style: preserve-3d;
@@ -157,12 +181,20 @@ input[type=number] {
 .flip-card-back {
   height: 100%;
   transform: rotateY(180deg);
-  background-color: #fff700;
   border-radius: 0.23rem;
 }
 .flip-card-front {
   transform: rotateY(360deg);
+  height: 100%;
+  background-image: url(./backGrounds/cardsBg.png);
+  background-size: 100%;
 }
 .flip-card-inner.rotated{
   transform: rotateY(180deg);
+}
+
+
+/* ------ buttons styles ------ */
+.button:hover {
+  background-color: #68b0c2;
 }
